--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     gap: 20px;
     justify-content: space-between;
     align-items: flex-start;
-    background-color: gainsboro;
+    background-color: aliceblue;
     padding: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
